# PEA_4

PEA_4/: CMakeLists.txt  main.cpp
PEA_4/Algorithm/: Ant.cpp  Ant.h  Colony.cpp  Colony.h
PEA_4/Utils/Presentation/: Menu.cpp  Menu.h
PEA_4/Utils/Reader/: FileReader.cpp  FileReader.h
